[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HowToPlay.gd" type="Script" id=3]
[ext_resource path="res://Utils/SmallPixel.tres" type="DynamicFont" id=4]

[node name="HowToPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0352941, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 10.0
margin_right = 269.0
margin_bottom = 170.0
size_flags_horizontal = 4
custom_constants/separation = 27
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 219.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
text = "You  need  your  groceries!  Follow  the 
 arrow  to  get  the  groceries  and  come  back 
while  maintaining  social  distancing,  and
 avoiding  that  pesky  professor  who  just 
\"happens\"  to  be  out  whenever  you  are!"
align = 1

[node name="Start" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 59.0
margin_top = 108.0
margin_right = 159.0
margin_bottom = 130.0
text = "Ready"

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]

[editable path="MarginContainer/VBoxContainer/Start"]
